# campus-delivery-robot-

./: .gitignore  LICENSE  MY_CONTRIBUTION.md  README.md  pytest.ini
bag/: README.md
docs/: Campus_Delivery_Robot.pptx  Campus_Delivery_Robot_Report.docx
scripts/: generate_architecture_diagram.py  generate_flowchart.py  generate_presentation.js  generate_report.js
src/delivery_cli/: CMakeLists.txt  package.xml  setup.py
src/delivery_cli/delivery_cli/: __init__.py  main.py
src/delivery_localization/: CMakeLists.txt  package.xml
src/delivery_localization/launch/: delivery_localization.launch
src/delivery_localization/src/: gps_simulator_node.py  map_tf_broadcaster_node.py
src/delivery_mission/: CMakeLists.txt  package.xml
src/delivery_mission/launch/: delivery_mission.launch
src/delivery_mission/src/: delivery_box_service_node.py  mission_fsm_node.py
src/delivery_msgs/: CMakeLists.txt  package.xml
src/delivery_msgs/action/: DeliveryMission.action
src/delivery_msgs/msg/: ObstacleInfo.msg  RobotStatus.msg  VoiceCommand.msg
src/delivery_msgs/srv/: EmergencyStop.srv  OpenDeliveryBox.srv
src/delivery_navigation/: CMakeLists.txt  package.xml
src/delivery_navigation/config/: waypoints.yaml
src/delivery_navigation/launch/: delivery_navigation.launch
src/delivery_navigation/src/: global_planner_helper_node.py  waypoint_action_server_node.py
src/delivery_perception_lidar/: CMakeLists.txt  package.xml
src/delivery_perception_lidar/launch/: delivery_perception_lidar.launch
src/delivery_perception_lidar/src/: auto_brake_node.py  lidar_obstacle_node.py
src/delivery_perception_vision/: CMakeLists.txt  package.xml
src/delivery_perception_vision/launch/: delivery_perception_vision.launch
src/delivery_perception_vision/src/: camera_publisher_node.py  vision_detector_node.py
src/delivery_robot_bringup/: CMakeLists.txt  package.xml
src/delivery_robot_bringup/config/: move_base_overrides.yaml
src/delivery_robot_bringup/launch/: delivery_robot_full.launch  delivery_robot_sim_only.launch  record_session.launch
src/delivery_robot_bringup/rviz/: delivery_robot.rviz
src/delivery_tests/: CMakeLists.txt  package.xml
src/delivery_tests/launch/: test_delivery_box_service.test  test_voice_parser.test
src/delivery_tests/tests/: conftest.py  test_cli.py  test_delivery_box_service.py  test_lidar_obstacle.py  test_voice_parser.py
src/delivery_voice_remote/: CMakeLists.txt  package.xml
src/delivery_voice_remote/launch/: delivery_voice_remote.launch
src/delivery_voice_remote/src/: remote_telemetry_node.py  voice_command_node.py
