<?xml version="1.0"?>
<package format="2">
  <name>delivery_mission</name>
  <version>1.0.0</version>
  <description>
    Mission control state machine and delivery box service for the
    campus delivery robot.
    Owner: Member 6.
    Contains two ROS nodes:
      - delivery_box_service_node : exposes the OpenDeliveryBox service
        and publishes the current lid state.
      - mission_fsm_node          : ties together voice commands, the
        navigation action, the brake service and the delivery box.
  </description>
  <maintainer email="member6@campusdelivery.local">Member 6</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>delivery_msgs</depend>
</package>
