<?xml version="1.0"?>
<package format="2">
  <name>delivery_msgs</name>
  <version>1.0.0</version>
  <description>
    Custom messages, services, and actions for the Campus Delivery Robot.
    Provides shared data structures used by every team member's nodes so
    that the perception, navigation, voice and mission packages can talk
    to each other in a consistent way.
  </description>
  <maintainer email="team@campusdelivery.local">Campus Delivery Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
