<?xml version="1.0"?>
<package format="2">
  <name>delivery_navigation</name>
  <version>1.0.0</version>
  <description>
    High-level navigation logic for the campus delivery robot. Wraps
    the standard move_base stack with a DeliveryMission action server
    that team mates can drive from the CLI, the mission node, or RViz.
    Owner: Member 4.
    Contains two ROS nodes:
      - waypoint_action_server_node : implements DeliveryMission action
        on top of move_base.
      - global_planner_helper_node  : monitors planning status and
        republishes a simplified "path summary" topic for the CLI.
  </description>
  <maintainer email="member4@campusdelivery.local">Member 4</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>delivery_msgs</depend>
</package>
