<?xml version="1.0"?>
<package format="2">
  <name>delivery_voice_remote</name>
  <version>1.0.0</version>
  <description>
    Voice command processing and remote monitoring publishers for the
    campus delivery robot.
    Owner: Member 5.
    Contains two ROS nodes:
      - voice_command_node       : converts spoken or simulated text
        utterances into VoiceCommand messages.
      - remote_telemetry_node    : republishes a compact JSON
        telemetry message used by the remote monitoring app.
  </description>
  <maintainer email="member5@campusdelivery.local">Member 5</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>delivery_msgs</depend>
</package>
